fix viewport function in covers

--- a/src/css/covers.css
+++ b/src/css/covers.css
@@ -4,7 +4,16 @@ ul {
   list-style-type: none;
 }
 .title-covers{
-  display: none;
+    border: 0;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+    clip-path: inset(100%);
 }
 
 #covers {
@@ -35,8 +44,6 @@ ul {
   grid-column-gap: 20px;
   grid-row-gap: 20px;
 }
-
-
 
 .marquee-inner.show {
 
@@ -79,6 +86,5 @@ ul {
   #covers {
       margin: 0;
 }   
-
 
   }
